<resources>
    <string name="app_name">Finding Nemo</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_location_through_gps">Get Location Through GPS</string>
    <string name="get_location_through_network">Get Location Through Network</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="appicon">AppIcon</string>
    <string name="not_have_an_account_click_here">Not have an Account? Click Here!</string>
    <string name="already_have_an_account_click_here">Already have an Account? Click Here!</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="profile">Profile</string>
    <string name="email_not_verified">Email Not Verified</string>
    <string name="verify_email">Verify Email</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="location_tracker">Location Tracker</string>
    <string name="update_profile">Update Profile</string>
    <string name="name_here">Name Here</string>
    <string name="_0_0">0.0</string>
    <string name="refresh_location">Refresh Location</string>
    <string name="share_location">Share Location</string>
    <string name="your_message">Your Message</string>
    <string name="last_known_location">Last Known Location</string>
    <string name="update_location">Update Location</string>
    <string name="navigate">Navigate</string>
    <string name="android_application">Android Application</string>
    <string name="title_required">Title (Required)</string>
    <string name="current_location">Current Location</string>
    <string name="default_notification_channel_id">myApp</string>
    <string name="default_notification_channel_name">locationTracker</string>
    <string name="msg_token_fmt" />
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="join_a_group">Join Circle</string>
    <string name="make_a_group">Make group</string>
    <string name="create_a_group">Create a Group</string>
    <string name="add_email">Add Email</string>
    <string name="add_members">Add Members</string>
    <string name="add_name">Add Name</string>
    <string name="member_information">Member Information</string>
    <string name="add_member">Add Member</string>
    <string name="added_members">Added Members</string>
    <string name="member_email">Member Email</string>
    <string name="done">Done</string>
    <string name="my_groups">My Groups</string>
    <string name="my_profile">My Profile</string>
    <string name="created">Created</string>
    <string name="participants">Participants</string>
    <string name="please_wait">Please wait…</string>
    <string name="add_icon">Add Icon</string>
    <string name="joined_groups">Joined Groups</string>
    <string name="title_activity_geo_fencing">GeoFencing</string>

    <string name="background_location_permission_message">
       <b>Allow only while using the app</b> permission has been granted. If you want
        to get location updates in the background even when not using the app then grant
        <b>Allow all the time</b> permission
    </string>
    <string name="add_tracking_location">Add Tracking location</string>
    <string name="current_tracking_location">Current Tracking Location</string>
    <string name="login">Login</string>
    <string name="hello_there_welcome">Hello There, Welcome!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_here">Welcome Here</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="make_sure_to_save_this_code_for_later_use">Make sure you save this code for later use.</string>
    <string name="next">next</string>
    <string name="register">Register</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_my_navigation">MyNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="groups">Groups</string>
    <string name="invite_member">Invite Member</string>
    <string name="location">Location</string>
    <string name="stop_sharing_location">Stop Sharing Location</string>

    <string name="close">Drawer Closed</string>
    <string name="open">Drawer Opened</string>
    <string name="enter_code_to_join_group">Enter Code to Join Circle</string>
    <string name="share_location_code"><![CDATA[Share Location & Code]]></string>
    <string name="circle">Circle</string>
    <string name="my_circle">My Circle</string>
    <string name="join_circle">Join Circle</string>
    <string name="do_you_want_to_add_geofence">Do you want to add geofence? Please press <b><i>Yes</i></b> to continue.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok_continue">Ok, Continue</string>

    <string name="texts">Please press for a few seconds on map to add geofence at your desired location.</string>
    <string name="add_geofence">Add Geofence</string>
    <string name="group_name">Circle Name</string>
    <string name="have_a_good_time">Track your loved ones.</string>

</resources>