<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/groups"
        android:title="@string/circle">

        <menu>
            <item
                android:id="@+id/nav_groups"
                android:icon="@drawable/ic_outline_groups_24"
                android:title="@string/my_circle" />

            <item
                android:id="@+id/nav_join"
                android:icon="@drawable/ic_group_add"
                android:title="@string/join_circle" />

            <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_group_add"
                android:title="@string/invite_member" />

            <item
                android:id="@+id/add_geofence"
                android:icon="@drawable/ic_location"
                android:title="@string/add_geofence" />

            <item
                android:id="@+id/stop_sharing"
                android:icon="@drawable/ic_location_off"
                android:title="Stop Sharing Location" />
        </menu>

    </item>

    <item android:id="@+id/profile"
        android:title="@string/profile">
        <menu>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_outline_person_outline_24"
            android:title="@string/my_profile" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_round_logout_24"
            android:title="@string/logout" />
        </menu>
    </item>
</menu>