<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.findingnemo.ui.home.HomeFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.findingnemo.ui.gallery.GalleryFragment"
        android:label="@string/my_groups"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.findingnemo.ui.slideshow.SlideshowFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_slideshow" />
</navigation>