<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    >
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:padding="10dp"
        android:src="@drawable/geofencingauto"
        android:contentDescription="@string/app_name" />
    
    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/geofenceText"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/do_you_want_to_add_geofence"
        android:fontFamily="@font/mitr_reg"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/noBtn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:text="@string/no"
            android:layout_weight="2"
            android:fontFamily="@font/mitr_medium"
            android:textSize="18sp"
            android:backgroundTint="#AEA9A9"
            android:layout_marginEnd="40dp"
            />

        <Button
            android:id="@+id/okBtn"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/ok_continue"
            android:layout_weight="2"
            android:fontFamily="@font/mitr_medium"
            android:textSize="18sp"
            android:backgroundTint="#56CEF3"
            />

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:fontFamily="@font/mitr_medium"
            android:backgroundTint="#56CEF3"
            android:textSize="18sp"
            android:text="@string/yes"
            android:layout_weight="2"
            />

    </LinearLayout>

</LinearLayout>