<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:background="@drawable/background_logo"    tools:context=".InvitationCode">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/appicon"
        android:transitionName="logo_image"
        app:srcCompat="@drawable/logo_image" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:fontFamily="@font/black_regular"
        android:text="@string/location_tracker"
        android:layout_marginBottom="80dp"
        android:textColor="@color/teal_700"
        android:textSize="35sp"
        android:transitionName="logo_text"
        />

    <TextView
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/make_sure_to_save_this_code_for_later_use" />

    <TextView
        android:id="@+id/inviteCode"
        android:layout_gravity="center"
        android:fontFamily="@font/mitr_reg"
        android:textSize="22sp"
        android:padding="10dp"
        android:background="@drawable/background_items"
        android:textColor="@color/teal_700"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xxxxxx" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/teal_700"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textSize="18sp"
        android:fontFamily="@font/mitr_medium"/>

    <ProgressBar
        android:id="@+id/progressBarRegisterBtn"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</LinearLayout>