<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_logo"
    android:padding="30dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/appicon"
        android:transitionName="logo_image"
        app:srcCompat="@drawable/logo_image" />

    <TextView
        android:id="@+id/joinText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/mitr_reg"
        android:gravity="center"
        android:text="@string/enter_code_to_join_group"
        android:textSize="20sp" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/joinText"
        app:pinHeight="35dp"
        app:pinLength="6"
        app:pinWidth="35dp"
        android:focusable="true"
        app:forceKeyboard="true"
        app:cursorVisible="true"
        app:inputType="number"
        />

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/pinView"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/mitr_medium"
        android:text="@string/join_a_group"
        android:textSize="18sp" />
</RelativeLayout>